Update guzzlehttp to 2.0

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "ext-json": "*",
         "cboden/ratchet": "^0.4.1",
         "facade/ignition-contracts": "^1.0",
-        "guzzlehttp/psr7": "^1.5",
+        "guzzlehttp/psr7": "^1.5|^2.0",
         "illuminate/broadcasting": "^6.0|^7.0|^8.0|^9.0",
         "illuminate/console": "^6.0|^7.0|^8.0|^9.0",
         "illuminate/http": "^6.0|^7.0|^8.0|^9.0",
